@@ -150,6 +150,7 @@ static NO_COPY struct
   X (SHARING_VIOLATION,		EBUSY),
   X (SIGNAL_PENDING,		EBUSY),
   X (SIGNAL_REFUSED,		EIO),
+  X (SXS_CANT_GEN_ACTCTX,	ELIBBAD),
   X (THREAD_1_INACTIVE,		EINVAL),
   X (TOO_MANY_LINKS,		EMLINK),
   X (TOO_MANY_OPEN_FILES,	EMFILE),
