@@ -1,6 +1,15 @@
 2012-08-14  Corinna Vinschen  <corinna@vinschen.de>
 
-	*  mkvers.sh: Drop reference to w32api includes.
+	* thread.cc (semaphore::_fixup_after_fork): Fix Win32 error output in
+	api_fatal call.
+
+2012-08-14  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* errno.cc (errmap): Keep sorted.
+
+2012-08-14  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mkvers.sh: Drop reference to w32api includes.
 
 2012-08-14  Corinna Vinschen  <corinna@vinschen.de>
 
